Correction du fichier img en images, remplacement de tous les termes img en images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a class="logo-container" href="./index.html"><img src="./img/booki.svg" alt="Logo Booki"></a>
+        <a class="logo-container" href="./index.html"><img src="./images/" alt="Logo Booki"></a>
         <nav>
             <ul>
                 <li><a href="#hebergements">Hébergements</a></li>
@@ -66,7 +66,7 @@
                             <h4 class="phantom-title-container">Les meilleurs hôtel de Marseille</h4>
                             <a href="#">
                                 <figure class="heberg-img-container">
-                                    <img src="./img/marcus-loke-wqjvwu_hzfo-unsplash.jpg" alt="Auberge de la canebière">
+                                    <img src="./images/marcus-loke-wqjvwu_hzfo-unsplash.jpg" alt="Auberge de la canebière">
                                     <figcaption>Auberge la Canebière</figcaption>
                                 </figure>
                                 <p class="heberg-img-principal">Nuit à partir de
@@ -85,7 +85,7 @@
                             <h4 class="phantom-title-container">Les meilleurs hôtel de Marseille</h4>
                             <a href="#">
                                 <figure class="heberg-img-container">
-                                    <img src="./img/fred-kleber-gtbaxavlvsg-unsplash.jpg" alt="Hôtel du port">
+                                    <img src="./images/fred-kleber-gtbaxavlvsg-unsplash.jpg" alt="Hôtel du port">
                                     <figcaption>Hôtel du port</figcaption>
                                 </figure>
                                 <p class="heberg-img-principal">Nuit à partir de
@@ -104,7 +104,7 @@
                             <h4 class="phantom-title-container">Les meilleurs hôtel de Marseille</h4>
                             <a href="#">
                                 <figure class="heberg-img-container">
-                                    <img src="./img/reisetopia-b8wigxa_pfu-unsplash.jpg" alt="Hôtel les mouettes">
+                                    <img src="./images/reisetopia-b8wigxa_pfu-unsplash.jpg" alt="Hôtel les mouettes">
                                     <figcaption>Hôtel Les mouettes</figcaption>
                                 </figure>
                                 <p class="heberg-img-principal">Nuit à partir de
@@ -123,7 +123,7 @@
                             <h4 class="phantom-title-container">Les meilleurs hôtel de Marseille</h4>
                             <a href="#">
                                 <figure class="heberg-img-container">
-                                    <img src="./img/annie-spratt-eg1qcIitaua-unsplash.jpg" alt="Hôtel de la mer">
+                                    <img src="./images/annie-spratt-eg1qcIitaua-unsplash.jpg" alt="Hôtel de la mer">
                                     <figcaption>Hôtel de la mer</figcaption>
                                 </figure>
                                 <p class="heberg-img-principal">Nuit à partir de
@@ -142,7 +142,7 @@
                             <h4 class="phantom-title-container">Les meilleurs hôtel de Marseille</h4>
                             <a href="#">
                                 <figure class="heberg-img-container">
-                                    <img src="./img/nicate-lee-kt-zyaiwbe0-unsplash.jpg" alt="Auberge le panier">
+                                    <img src="./images/nicate-lee-kt-zyaiwbe0-unsplash.jpg" alt="Auberge le panier">
                                     <figcaption>Auberge Le Panier</figcaption>
                                 </figure>
                                 <p class="heberg-img-principal">Nuit à partir de
@@ -161,7 +161,7 @@
                             <h4 class="phantom-title-container">Les meilleurs hôtel de Marseille</h4>
                             <a href="#">
                                 <figure class="heberg-img-container">
-                                    <img src="./img/febrian-zakaria-m6s1wvfw68a-unsplash.jpg" alt="Hôtel chez amina">
+                                    <img src="./images/febrian-zakaria-m6s1wvfw68a-unsplash.jpg" alt="Hôtel chez amina">
                                     <figcaption>Hôtel Chez Amina</figcaption>
                                 </figure>
                                 <p class="heberg-img-principal">Nuit à partir de
@@ -185,10 +185,9 @@
                     <div class="all-article-container">
                         <a href="#">
                         <article class="heberg-populaire-container">
-                            
                                 <div class="heberg-all-container">
                                 <div class="heberg-populaire-img">
-                                    <img src="./img/emile-guillemot-bj_rcsc5xfe-unsplash.jpg" alt="Hôtel le soleil du matin">
+                                    <img src="./images/emile-guillemot-bj_rcsc5xfe-unsplash.jpg" alt="Hôtel le soleil du matin">
                                 </div>
                                 <div class="heberg-contenu-container">
                                     <div>
@@ -212,7 +211,7 @@
                         <article class="heberg-populaire-container">
                                 <div class="heberg-all-container">
                                 <div class="heberg-populaire-img">
-                                    <img src="./img/aw-creative-vgs8z60yt2c-unsplash.jpg" alt="Chambres d'hôtes au cœeur de l'eau">
+                                    <img src="./images/aw-creative-vgs8z60yt2c-unsplash.jpg" alt="Chambres d'hôtes au cœeur de l'eau">
                                 </div>
                                 <div class="heberg-contenu-container">
                                     <div>
@@ -236,7 +235,7 @@
                         <article class="heberg-populaire-container">
                                 <div class="heberg-all-container">
                                 <div class="heberg-populaire-img">
-                                    <img src="./img/febrian-zakaria-sjvu0thccqa-unsplash.jpg" alt="Hôtel bleu et blanc">
+                                    <img src="./images/febrian-zakaria-sjvu0thccqa-unsplash.jpg" alt="Hôtel bleu et blanc">
                                 </div>
                                 <div class="heberg-contenu-container">
                                     <div>
@@ -265,25 +264,25 @@
         <div class="flex-activites">
             <a href="#">
             <figure class="activites-container">
-                <img src="./img/reno-laithienne-qugjhdy5fyk-unsplash.jpg" alt="Vieux port">
+                <img src="./images/reno-laithienne-qugjhdy5fyk-unsplash.jpg" alt="Vieux port">
             <h3>Vieux Port</h3>
             </figure>
             </a>
             <a href="#">
             <figure class="activites-container">
-                <img src="./img/paul-hermann-qftrldqirhi-unsplash.jpg" alt="Fort de pomègues">
+                <img src="./images/paul-hermann-qftrldqirhi-unsplash.jpg" alt="Fort de pomègues">
             <h3>Fort de Pomègues</h3>
             </figure>
             </a>
             <a href="#">
             <figure class="activites-container">
-                <img src="./img/kilyan-sockalingum-nr8-cbcn3aI-unsplash.jpg" alt="Parc national des calanques">
+                <img src="./images/kilyan-sockalingum-nr8-cbcn3aI-unsplash.jpg" alt="Parc national des calanques">
             <h3>Parc national des Calanques</h3>
             </figure>
             </a>
             <a href="#">
             <figure class="activites-container">
-                <img src="./img/florian-wehde-xw9e8gdotxI-unsplash.jpg" alt="Notre dame de la garde">                                                        
+                <img src="./images/florian-wehde-xw9e8gdotxI-unsplash.jpg" alt="Notre dame de la garde">                                                        
             <h3>Notre-Dame-de-la-Garde</h3>
             </figure>
             </a>
