Correction d'une faute d'ortogrpahe dans le titre Hébergements à Marseille, le s a été rajouté

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
         <div class="habitations-container">
             <section id="hebergements" class="heberg-section">
-                    <h2>Hébergement à Marseille</h2>
+                    <h2>Hébergements à Marseille</h2>
                     <div class="heberg-content">
                         <article class="heberg-container">
                             <h4 class="phantom-title-container">Les meilleurs hôtel de Marseille</h4>
