Rajout de booki.svg à la balise img dans le header suite à un oubli

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a class="logo-container" href="./index.html"><img src="./images/" alt="Logo Booki"></a>
+        <a class="logo-container" href="./index.html"><img src="./images/booki.svg" alt="Logo Booki"></a>
         <nav>
             <ul>
                 <li><a href="#hebergements">Hébergements</a></li>
