Changement de balise html pour le bloc les plus populaires désormais c'est une section et plus un aside

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </div>
                     <a class="heberg-voir-plus" href="#">Afficher plus</a>
             </section>
-                <aside class="populaire-container">
+                <section class="populaire-container">
                     <i class="fa-solid fa-chart-line chart"></i>
                     <h2>Les plus populaires</h2>
                     <div class="all-article-container">
@@ -250,7 +250,7 @@
                         </article>
                         </a>
                     </div>
-                </aside>
+                </section>
         </div>
     <h2 class="title-activites-container">Activités à Marseille</h2>                   
     <article id="activites" class="heberg-sectionbis">
